--- a/hero-conjurer/css/conjurer.css
+++ b/hero-conjurer/css/conjurer.css
@@ -3,6 +3,10 @@
   display: flex;
   width: 941px;
   height: 600px;
+  font-family: "Nodesto", "Signika", "Palatino Linotype", serif;
+}
+#HC-form .form {
+  width: 100%;
 }
 /* Container for banner */
 #HC-form .banner-container {
@@ -29,6 +33,7 @@
   display: flex;
   overflow: hidden;
   width: 100%;
+  margin: auto;
 }
 /* Tab buttons hover */
 #HC-header .tablinks:hover {
@@ -42,11 +47,33 @@
   background-color: #cccccc;
   border: 3px solid #000000;
   transition: 0.3s;
-  width: auto;
   font-size: 1em;
   font-weight: bold;
   border-radius: 10px;
   margin: 1em;
+}
+
+#HC-abilities {
+  display: flex;
+  list-style: none;
+  width: 80%;
+  margin: auto;
+  padding: 0;
+  font-size: 28px;
+}
+
+#HC-abilities .abilities {
+  height: 70px;
+  width: 100px;
+  text-align: center;
+  margin: auto;
+  padding: 0 1em;
+  border: 2px groove #eeede0;
+  border-radius: 3px;
+}
+
+#HC-abilities .score {
+  margin: 0 auto;
 }
 
 /* Style the tab content */
