--- a/hero-conjurer/css/conjurer.css
+++ b/hero-conjurer/css/conjurer.css
@@ -63,17 +63,68 @@
 }
 
 #HC-abilities .abilities {
-  height: 70px;
+  height: auto !important;
   width: 100px;
   text-align: center;
   margin: auto;
-  padding: 0 1em;
-  border: 2px groove #eeede0;
-  border-radius: 3px;
 }
 
 #HC-abilities .score {
   margin: 0 auto;
+}
+
+#HC-abilities .border {
+  border: 2px groove #eeede0;
+  border-radius: 3px;
+  padding: 0 1em;
+}
+
+#HC-abilities .small {
+  height: 68px;
+}
+
+#HC-abilities .large {
+  height: 146px;
+}
+
+#HC-abilities .square{
+	background: #0266a8; 
+  background: -webkit-linear-gradient(#0266a8 0%, #005389 100%);
+  background: -o-linear-gradient(#0266a8 0%, #005389 100%);
+  background-image: -webkit-linear-gradient(#0266a8 0%, #005389 100%);
+  background-image: -o-linear-gradient(#0266a8 0%, #005389 100%);
+  background-image: linear-gradient(#0266a8 0%, #005389 100%); 
+	border-radius:5px;
+  border-bottom:1px solid #FFF;
+	display:inline-block;
+  height:auto;
+  width:100%;
+  position: relative;
+}
+
+#HC-abilities .increment:after{
+  position:relative;
+  top:-0.8em;
+  width: 0;
+	height: 0;
+  content:'';
+	border-style: solid;
+	border-width: 0 7px 8px 7px;
+	border-color: transparent transparent #FFFFFF transparent;
+  border-radius:2px;
+  margin: auto;
+}
+
+#HC-abilities .decrement:after{
+  position:relative;
+  top:0.8em;
+  width: 0;
+	height: 0;
+  content:'';
+	border-style: solid;
+	border-width: 8px 7px 0 7px;
+	border-color: #FFFFFF transparent transparent transparent;
+  border-radius:2px;
 }
 
 /* Style the tab content */
