--- a/hero-conjurer/templates/equipment.html
+++ b/hero-conjurer/templates/equipment.html
@@ -2,15 +2,15 @@
     <form autocomplete='off'>
         <!-- Tabs -->
         <div id='HC-header'>
-            <button type='submit' class='tablinks race'>RACE</button>
-            <button type='submit' class='tablinks class'>CLASS</button>
-            <button type='submit' class='tablinks abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks background'>BACKGROUND</button>
-            <button type='submit' class='tablinks equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks spells'>SPELLS</button>
-            <button type='submit' class='tablinks feats'>FEATS</button>
-            <button type='submit' class='tablinks bio'>BIO</button>
-            <button type='submit' class='tablinks summary'>SUMMARY</button>
+            <button type='submit' class='tablinks navigate race'>RACE</button>
+            <button type='submit' class='tablinks navigate class'>CLASS</button>
+            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
+            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
+            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
+            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
+            <button type='submit' class='tablinks navigate feats'>FEATS</button>
+            <button type='submit' class='tablinks navigate bio'>BIO</button>
+            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
         </div>
         
         <!-- Tab content -->
@@ -18,9 +18,9 @@
             <h3 class='tabcontent'>Equipment menu</h3>
         </div>
 
-        <div id='HC-navigate' class='navigate'>
-            <button type='submit' class='submit prev'>PREVIOUS</button>
-            <button type='submit' class='submit next'>NEXT</button>
+        <div id='HC-navigate'>
+            <button type='submit' class='navigate prev'>PREVIOUS</button>
+            <button type='submit' class='navigate next'>NEXT</button>
         </div>
     </form>
 </div>
