--- a/hero-conjurer/templates/race.html
+++ b/hero-conjurer/templates/race.html
@@ -3,15 +3,15 @@
         <input type='hidden' name='sheet' id='sheet' value='race'>
         <!-- Tabs -->
         <nav id='HC-header'>
-            <button type='submit' class='tablinks race'>RACE</button>
-            <button type='submit' class='tablinks class'>CLASS</button>
-            <button type='submit' class='tablinks abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks background'>BACKGROUND</button>
-            <button type='submit' class='tablinks equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks spells'>SPELLS</button>
-            <button type='submit' class='tablinks feats'>FEATS</button>
-            <button type='submit' class='tablinks bio'>BIO</button>
-            <button type='submit' class='tablinks summary'>SUMMARY</button>
+            <button type='submit' class='tablinks navigate race'>RACE</button>
+            <button type='submit' class='tablinks navigate class'>CLASS</button>
+            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
+            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
+            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
+            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
+            <button type='submit' class='tablinks navigate feats'>FEATS</button>
+            <button type='submit' class='tablinks navigate bio'>BIO</button>
+            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
         </nav>
 
         <!-- Abilities -->
@@ -33,7 +33,7 @@
         <div id='HC-content'>
             <!-- Select Race-->
             <label for='race'>Race:</label>
-            <select class='select' name='race' id='race'>
+            <select class='submit' name='race' id='race'>
                 <option value='{{data.race.race}}' selected hidden>{{data.race.race}}</option> 
                 {{#with info.race as | race |}}
                     {{#each race}}
@@ -47,7 +47,7 @@
                 <!-- Select Subrace-->
                 {{#if (objectLength data.race.data.subraces)}}
                     <label for='subrace'>Subrace:</label>
-                    <select class='select' name='subrace' id='subrace'>
+                    <select class='submit' name='subrace' id='subrace'>
                         <option value='{{data.race.subrace}}' selected hidden>{{data.race.subrace}}</option> 
                         {{#with data.race.data.subraces as | subrace |}}
                             {{#each subrace}}
@@ -59,7 +59,7 @@
 
                 <!--Select Alignment-->
                 <label for='alignment'>Alignment:</label>
-                <select class='select' name='alignment' id='alignment'>
+                <select class='submit' name='alignment' id='alignment'>
                     <option value='{{data.race.alignment}}' selected hidden>{{data.race.alignment}}</option> 
                     {{#with info.alignment as | alignment |}}
                         {{#each alignment}}
@@ -79,8 +79,8 @@
 
         </div>
 
-        <div id='HC-navigate' class='navigate'>
-            <button type='submit' class='submit next'>NEXT</button>
+        <div id='HC-navigate'>
+            <button type='submit' class='navigate next'>NEXT</button>
         </div>
     </form>
 </div>
