--- a/hero-conjurer/templates/abilities.html
+++ b/hero-conjurer/templates/abilities.html
@@ -4,41 +4,40 @@
 
         <!-- Tabs -->
         <div id='HC-header'>
-            <button type='submit' class='tablinks race'>RACE</button>
-            <button type='submit' class='tablinks class'>CLASS</button>
-            <button type='submit' class='tablinks abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks background'>BACKGROUND</button>
-            <button type='submit' class='tablinks equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks spells'>SPELLS</button>
-            <button type='submit' class='tablinks feats'>FEATS</button>
-            <button type='submit' class='tablinks bio'>BIO</button>
-            <button type='submit' class='tablinks summary'>SUMMARY</button>
+            <button type='submit' class='tablinks navigate race'>RACE</button>
+            <button type='submit' class='tablinks navigate class'>CLASS</button>
+            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
+            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
+            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
+            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
+            <button type='submit' class='tablinks navigate feats'>FEATS</button>
+            <button type='submit' class='tablinks navigate bio'>BIO</button>
+            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
         </div>
         
         <!-- Abilities -->
         <ul id='HC-abilities'>
-            {{#with data.abilities as | ability |}}
-                {{#each ability}}
-                    <li class='abilities large'>
-                        <span class="icon square increment submit"></span>
-                        <div class='abilities small border'>
-                            <h3 class='score'>{{@key}}</h3>
-                            <input class='score' type="text" name="score" id="score" value="{{this}}"></input>
-                        </div>
-                        <span class="icon square decrement submit"></span>
-                    </li>
-                {{/each}}
-            {{/with}}
+            {{#each data.abilities}}
+                <li class='abilities large'>
+                    <span class="icon square increment"></span>
+                    <div class='abilities small border'>
+                        <h3>{{@key}}</h3>
+                        <input class='score' type="text" value="{{.}}"></input>
+                        <input type='hidden' class='score-hidden' name="{{@key}}" id="{{@key}}" value='{{lookup ../data/abilitiesForm @key}}'>
+                    </div>
+                    <span class="icon square decrement"></span>
+                </li>
+            {{/each}}
         </ul>
 
         <!-- Tab content -->
         <div id='HC-content'>
-            <h3 class='tabcontent'>Abilities menu</h3>
+            <h3 class='tabcontent'>Points Left: {{pointBuySum data.abilitiesForm}}/27</h3>
         </div>
 
-        <div id='HC-navigate' class='navigate'>
-            <button type='submit' class='submit prev'>PREVIOUS</button>
-            <button type='submit' class='submit next'>NEXT</button>
+        <div id='HC-navigate'>
+            <button type='submit' class='navigate prev'>PREVIOUS</button>
+            <button type='submit' class='navigate next'>NEXT</button>
         </div>
     </form>
 </div>
