--- a/hero-conjurer/templates/class.html
+++ b/hero-conjurer/templates/class.html
@@ -38,42 +38,65 @@
                 {{#with info.classData as | class |}}
                     {{#each this}}
                         <div class='class-entry'>
-                            <img class='class-img' name='{{this.name}}' id='{{this.name}}' src='{{this.data.img}}'>
+                            <img class='class-img data-click' name='class' id='{{this.name}}' src='{{this.data.img}}'>
                             <h3>{{this.name}}</h3> 
                         </div>
                     {{/each}}
                 {{/with}}
 
-                {{{data.class.pack.data.description.value}}}
+                {{#if data.class.name}}
+                
+                    {{{data.class.pack.data.description.value}}}
+                    
+                    <!-- Hit Die -->
+                    <h3>Hit Die:&nbsp</h3>
+                    <div>
+                        <h3>{{upperCase data.class.pack.data.hitDice}}</h3>
+                    </div>
 
-                <!-- Weapon Proficiencies -->
-                <h3>Weapon Proficiencies:&nbsp</h3>
-                <div>
-                    {{#each data.class.data.weapon_prof}}
-                        <h3>{{this}}&nbsp</h3>
-                    {{/each}}
-                </div>
+                    <!-- Weapon Proficiencies -->
+                    <h3>Weapon Proficiencies:&nbsp</h3>
+                    <ul>
+                        {{#each data.class.data.weapon_prof}}
+                            <li>{{this}}&nbsp</li>
+                        {{/each}}
+                    </ul>
 
-                <!-- Armor Proficiencies -->
-                <h3>Armor Proficiencies:&nbsp</h3>
-                <div>
-                    {{#each data.class.data.armor_prof}}
-                        <h3>{{this}}&nbsp</h3>
-                    {{/each}}
-                </div>
+                    <!-- Armor Proficiencies -->
+                    <h3>Armor Proficiencies:&nbsp</h3>
+                    <ul>
+                        {{#each data.class.data.armor_prof}}
+                            <li>{{this}}&nbsp</li>
+                        {{/each}}
+                    </ul>
 
-                <!-- Choose Skills -->
-                <h3>Choose {{data.class.data.num_skills}} skills</h3>
-                {{#each data.class.data.skills}}
-                    <label for='{{this}}'>{{this}}</label>
-                    <input type='checkbox' id='{{this}}' name='skill' value='{{this}}'>
-                {{/each}}
+                    <!-- Starting Equipment-->
+                    <h3>Starting Equipment:&nbsp</h3>
+                    <ul>
+                        {{#each data.class.data.equipment}}
+                            <li>{{this}}&nbsp</li>
+                        {{/each}}
+                    </ul>
+
+                    <!-- Choose Skills -->
+                    <h3>Choose {{data.class.data.num_skills}} skills</h3>
+                    <ul style="list-style: none;">
+                        {{#each data.class.data.skills}}
+                            <li>
+                                <input type='checkbox' id='{{this}}' name='skill' value='{{this}}'>
+                                <label for='{{this}}'>{{this}}</label>
+                            </li>
+                        {{/each}}
+                    </ul>
+
+                {{/if}}
             </div>
 
             <!-- Info Pane -->
             <div class='info-pane class-info'>
-                <iframe width='100%' height='100%' src='{{info.classTemplate}}'></iframe>
+                <iframe width='100%' height='100%' src='{{data.class.template}}'></iframe>
             </div>
+
         </div>
 
         <div id='HC-navigate'>
