--- a/hero-conjurer/templates/spells.html
+++ b/hero-conjurer/templates/spells.html
@@ -1,5 +1,7 @@
 <div id='HC-form'>
-    <form autocomplete='off'>
+    <form autocomplete='off' class='form'>
+        <input type='hidden' name='sheet' id='sheet' value='spells'>
+
         <!-- Tabs -->
         <div id='HC-header'>
             <button type='submit' class='tablinks navigate race'>RACE</button>
@@ -15,7 +17,28 @@
         
         <!-- Tab content -->
         <div id='HC-content'>
-            <h3 class='tabcontent'>Spells menu</h3>
+
+            <div class='choice-pane'>
+                <h3>Cantrips:&nbsp</h3>
+                {{#range 3}}
+                    <select class='change-disable' name='spell' id='spell'>
+                        <option disabled hidden selected></option>
+                        {{#each ../info.spellData.L0}}
+                            <option value='Spells:{{this.data.name}}' name='{{this.data.name}}'>{{this.data.name}}</option>
+                        {{/each}}
+                    </select>
+                {{/range}}
+
+
+                <h3>1st Level Spells:&nbsp</h3>
+                <select name='spell' id='spell'>
+                        {{#each info.spellData.L1}}
+                            <option value='Spells:{{this.data.name}}'>{{this.data.name}}</option>
+                        {{/each}}
+                </select>
+
+            </div>
+
         </div>
 
         <div id='HC-navigate'>
