Added spellbook, reworked navigation, styling

--- a/hero-conjurer/templates/abilities.html
+++ b/hero-conjurer/templates/abilities.html
@@ -3,17 +3,17 @@
         <input type='hidden' name='sheet' id='sheet' value='abilities'>
 
         <!-- Tabs -->
-        <div id='HC-header'>
-            <button type='submit' class='tablinks navigate race'>RACE</button>
-            <button type='submit' class='tablinks navigate class'>CLASS</button>
-            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
-            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
-            <button type='submit' class='tablinks navigate feats'>FEATS</button>
-            <button type='submit' class='tablinks navigate bio'>BIO</button>
-            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
-        </div>
+        <nav id='HC-header'>
+            <a class='tablinks navigate race'>RACE</a>
+            <a class='tablinks navigate class'>CLASS</a>
+            <a class='tablinks navigate abilities active'>ABILITIES</a>
+            <a class='tablinks navigate background'>BACKGROUND</a>
+            <a class='tablinks navigate equipment'>EQUIPMENT</a>
+            <a class='tablinks navigate spells'>SPELLS</a>
+            <a class='tablinks navigate feats'>FEATS</a>
+            <a class='tablinks navigate bio'>BIO</a>
+            <a class='tablinks navigate summary'>SUMMARY</a>
+        </nav>
         
         <!-- Abilities -->
         <ul id='HC-abilities'>
