--- a/hero-conjurer/css/conjurer.css
+++ b/hero-conjurer/css/conjurer.css
@@ -34,6 +34,7 @@
   overflow: hidden;
   width: 100%;
   margin: auto;
+  margin-left: -0.5%;
 }
 /* Tab buttons hover */
 #HC-header .tablinks:hover {
@@ -45,19 +46,26 @@
 /* HC tab buttons */
 #HC-header .tablinks {
   background-color: #cccccc;
-  border: 3px solid #000000;
+  border: 1px solid #000000;
   transition: 0.3s;
-  font-size: 1em;
-  font-weight: bold;
-  border-radius: 10px;
-  margin: 1em;
+  font-size: 1.3em;
+  margin: auto;
+  padding: 0.3em;
+  text-align: center;
+  width: 100%;
+}
+
+#HC-header .tablinks.active {
+  color: #dbdbdb;
+  background-color: #b30000;
+  box-shadow: none;
 }
 
 #HC-abilities {
   display: flex;
   list-style: none;
   width: 80%;
-  margin: auto;
+  margin: 2% auto 2% auto;
   padding: 0;
   font-size: 28px;
 }
@@ -88,18 +96,17 @@
 }
 
 #HC-abilities .square{
-	background: #0266a8; 
-  background: -webkit-linear-gradient(#0266a8 0%, #005389 100%);
-  background: -o-linear-gradient(#0266a8 0%, #005389 100%);
-  background-image: -webkit-linear-gradient(#0266a8 0%, #005389 100%);
-  background-image: -o-linear-gradient(#0266a8 0%, #005389 100%);
-  background-image: linear-gradient(#0266a8 0%, #005389 100%); 
-	border-radius:5px;
+	background: #919191;
   border-bottom:1px solid #FFF;
 	display:inline-block;
   height:auto;
   width:100%;
-  position: relative;
+}
+#HC-abilities .square:hover{
+	background: #ab6a6a;
+}
+#HC-abilities .square:active{
+	background: #b30000;
 }
 
 #HC-abilities .increment:after{
@@ -136,6 +143,24 @@
   height: 100%;
 } 
 
+#HC-content .subtab {
+  float: left;
+  width: 5%;
+  height: auto;
+  font-size: 40px;
+}
+
+#HC-content .subtablinks {
+  background: #919191;
+  padding: 10%;
+  margin: 5% auto 5% auto;
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  left: -20%;
+}
+
 #HC-content .choice {
   width: 30%;
   padding: 5%;
@@ -165,12 +190,12 @@
   margin: auto;
 }
 
-#HC-content .class-img {
+#HC-content .selector {
   width: 80px;
   height: 80px;
 }
 
-#HC-content .class-img:hover {
+#HC-content .selector:hover {
   opacity: 0.5;
 }
 
