--- a/hero-conjurer/templates/background.html
+++ b/hero-conjurer/templates/background.html
@@ -1,17 +1,18 @@
 <div id='HC-form'>
     <form autocomplete='off' class='form'>
         <input type='hidden' name='sheet' id='sheet' value='background'>
+        
         <!-- Tabs -->
         <nav id='HC-header'>
-            <button type='submit' class='tablinks navigate race'>RACE</button>
-            <button type='submit' class='tablinks navigate class'>CLASS</button>
-            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
-            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
-            <button type='submit' class='tablinks navigate feats'>FEATS</button>
-            <button type='submit' class='tablinks navigate bio'>BIO</button>
-            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
+            <a class='tablinks navigate race'>RACE</a>
+            <a class='tablinks navigate class'>CLASS</a>
+            <a class='tablinks navigate abilities'>ABILITIES</a>
+            <a class='tablinks navigate background active'>BACKGROUND</a>
+            <a class='tablinks navigate equipment'>EQUIPMENT</a>
+            <a class='tablinks navigate spells'>SPELLS</a>
+            <a class='tablinks navigate feats'>FEATS</a>
+            <a class='tablinks navigate bio'>BIO</a>
+            <a class='tablinks navigate summary'>SUMMARY</a>
         </nav>
         
         <!-- Tab content -->
