--- a/hero-conjurer/templates/class.html
+++ b/hero-conjurer/templates/class.html
@@ -1,17 +1,18 @@
 <div id='HC-form'>
     <form autocomplete='off' class='form'>
         <input type='hidden' name='sheet' id='sheet' value='class'>
+        
         <!-- Tabs -->
         <nav id='HC-header'>
-            <button type='submit' class='tablinks navigate race'>RACE</button>
-            <button type='submit' class='tablinks navigate class'>CLASS</button>
-            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
-            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
-            <button type='submit' class='tablinks navigate feats'>FEATS</button>
-            <button type='submit' class='tablinks navigate bio'>BIO</button>
-            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
+            <a class='tablinks navigate race'>RACE</a>
+            <a class='tablinks navigate class active'>CLASS</a>
+            <a class='tablinks navigate abilities'>ABILITIES</a>
+            <a class='tablinks navigate background'>BACKGROUND</a>
+            <a class='tablinks navigate equipment'>EQUIPMENT</a>
+            <a class='tablinks navigate spells'>SPELLS</a>
+            <a class='tablinks navigate feats'>FEATS</a>
+            <a class='tablinks navigate bio'>BIO</a>
+            <a class='tablinks navigate summary'>SUMMARY</a>
         </nav>
 
         <!-- Abilities -->
@@ -38,7 +39,7 @@
                 {{#with info.classData as | class |}}
                     {{#each this}}
                         <div class='class-entry'>
-                            <img class='class-img data-click' name='class' id='{{this.name}}' src='{{this.data.img}}'>
+                            <img style="box-shadow:{{this.border}};" class='selector data-click' name='class' id='{{this.name}}' src='{{this.data.img}}'>
                             <h3>{{this.name}}</h3> 
                         </div>
                     {{/each}}
@@ -92,10 +93,12 @@
                 {{/if}}
             </div>
 
-            <!-- Info Pane -->
-            <div class='info-pane class-info'>
-                <iframe width='100%' height='100%' src='{{data.class.template}}'></iframe>
-            </div>
+            {{#if data.class.name}}
+                <!-- Info Pane -->
+                <div class='info-pane class-info'>
+                    <iframe width='100%' height='100%' src='{{data.class.template}}'></iframe>
+                </div>
+            {{/if}}
 
         </div>
 
