--- a/hero-conjurer/templates/start.html
+++ b/hero-conjurer/templates/start.html
@@ -1,17 +1,19 @@
 <div id='HC-form'>
-    <form autocomplete='off'>
+    <form autocomplete='off' class='form'>
+        <input type='hidden' name='sheet' id='sheet' value='start'>
+
         <!-- Tabs -->
-        <div id='HC-header'>
-            <button type='submit' class='tablinks navigate race'>RACE</button>
-            <button type='submit' class='tablinks navigate class'>CLASS</button>
-            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
-            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
-            <button type='submit' class='tablinks navigate feats'>FEATS</button>
-            <button type='submit' class='tablinks navigate bio'>BIO</button>
-            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
-        </div>
+        <nav id='HC-header'>
+            <a class='tablinks navigate race'>RACE</a>
+            <a class='tablinks navigate class'>CLASS</a>
+            <a class='tablinks navigate abilities'>ABILITIES</a>
+            <a class='tablinks navigate background'>BACKGROUND</a>
+            <a class='tablinks navigate equipment'>EQUIPMENT</a>
+            <a class='tablinks navigate spells'>SPELLS</a>
+            <a class='tablinks navigate feats'>FEATS</a>
+            <a class='tablinks navigate bio'>BIO</a>
+            <a class='tablinks navigate summary'>SUMMARY</a>
+        </nav>
         
         <!-- Banner -->
         <div class='banner-container'>
