--- a/hero-conjurer/templates/parts/spells/spells-first.html
+++ b/hero-conjurer/templates/parts/spells/spells-first.html
@@ -28,18 +28,15 @@
                     <h3>1st Level Spells:&nbsp</h3>
                     {{#each data.class.spells.[1]}}
                         <div class='class-entry'>
-                            <img class='selector data-click' src='{{this.data.img}}' value='Spells:{{this.name}}' name='spells' id='{{this.name}}'>
+                            <img style="box-shadow:{{this.border}};" class='selector data-click' src='{{this.data.img}}' value='Spells:{{this.name}}' name='spells' id='{{this.name}}'>
                             <h3>{{this.name}}</h3> 
                         </div>
                     {{/each}}
                 </div>
 
                 <!-- Info Pane -->
-                <div class='secondary-choice-pane'>
-                    <h3>Spellbook:&nbsp</h3>
-                    {{#each data.spells.names}}
-                        <span>{{this}}</span>
-                    {{/each}}
+                <div class='info-pane class-info'>
+                    <p>{{{data.spells.template}}}</p>
                 </div>
             {{/if}}
 
